added ragu recipe

--- a/index.html
+++ b/index.html
@@ -573,10 +573,10 @@
             </div>
             <div class="col-lg-4 col-md-6 text-center">
                 <div class="service-box">
-                    <a class="no-hover" href="https://shop.makulia.fi/paahdettu-munakoiso-tuoretta-mozzarellaa/"><img src="img/recipes/pinja-melanzane-square.jpg" class="img-responsive" alt="Paahdettua munakoisoa ja tuoretta mozzarellaa">
-                    <h3>Paahdetut munakoisot</h3>
-                    <p class="text-muted">Helpot mausteiset munakoisoviipaleet tarjoavat suussasulavan herkullisen makuparin mozzarellalle</p></a>
-                    <p><a href="https://shop.makulia.fi/paahdettu-munakoiso-tuoretta-mozzarellaa/" class="more-link">Kurkkaa resepti!</a></p>
+                    <a class="no-hover" href="https://shop.makulia.fi/ragu-napoletano-napolilainen-tomaattikastike/"><img src="img/recipes/tomaatteja.png" class="img-responsive" alt="Tomaatteja">
+                    <h3>Ragù napoletano</h3>
+                    <p class="text-muted">Upea napolilainen tomaattikastike saa täyteläisen makunsa siinä pitkään ja hartaasti haudutetuista lihoista - tämä on napolilaisen keittiön kulmakivi</p></a>
+                    <p><a href="https://shop.makulia.fi/ragu-napoletano-napolilainen-tomaattikastike/" class="more-link">Kurkkaa resepti!</a></p>
                 </div>
             </div>
 
@@ -621,6 +621,15 @@
             </div>
 
             <div class="clearfix visible-md"></div>
+
+            <div class="col-lg-4 col-md-6 text-center">
+                <div class="service-box">
+                    <a class="no-hover" href="https://shop.makulia.fi/paahdettu-munakoiso-tuoretta-mozzarellaa/"><img src="img/recipes/pinja-melanzane-square.jpg" class="img-responsive" alt="Paahdettua munakoisoa ja tuoretta mozzarellaa">
+                    <h3>Paahdetut munakoisot</h3>
+                    <p class="text-muted">Helpot mausteiset munakoisoviipaleet tarjoavat suussasulavan herkullisen makuparin mozzarellalle</p></a>
+                    <p><a href="https://shop.makulia.fi/paahdettu-munakoiso-tuoretta-mozzarellaa/" class="more-link">Kurkkaa resepti!</a></p>
+                </div>
+            </div>
 
         </div>
     </section>
