added lasagna to reseptit section

--- a/index.html
+++ b/index.html
@@ -571,6 +571,27 @@
                     <hr class="primary">
                 </div>
             </div>
+
+            <div class="col-lg-4 col-md-6 text-center">
+                <div class="service-box">
+                    <a class="no-hover" href="https://shop.makulia.fi/lasagna-napoletana-di-carnevale-napolilainen-karnevaalilasagne/"><img src="img/recipes/lasagna-pinja-delizioso-square.jpg" class="img-responsive" alt="Kuva: Lasagna napoletana di Carnevale">
+                    <h3>Lasagna napoletana di Carnevale</h3>
+                    <p class="text-muted">Ihastuttavan runsas karnevaalilasagne maistuu napolilaiselta juhlalta parhaimmillaan</p></a>
+                    <p><a href="https://shop.makulia.fi/lasagna-napoletana-di-carnevale-napolilainen-karnevaalilasagne/" class="more-link">Katso ohje!</a></p>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 text-center">
+                <div class="service-box">
+                    <a class="no-hover" href="https://shop.makulia.fi/savuinen-samppanjarisotto/"><img src="img/recipes/savu-samppanja-pippuri-squared.jpg" class="img-responsive" alt="savuinen samppanjarisotto">
+                    <h3>Savuinen samppanjarisotto</h3>
+                    <p class="text-muted">Savustettu mozzarella, samppanja ja vastarouhittu mustapippuri antavat risotolle hienostuneen maun</p></a>
+                    <p><a href="https://shop.makulia.fi/savuinen-samppanjarisotto/" class="more-link">Testaa uusi makuelämys!</a></p>
+                </div>
+            </div>
+
+            <div class="clearfix visible-md"></div>
+
             <div class="col-lg-4 col-md-6 text-center">
                 <div class="service-box">
                     <a class="no-hover" href="https://shop.makulia.fi/ragu-napoletano-napolilainen-tomaattikastike/"><img src="img/recipes/tomaatteja.png" class="img-responsive" alt="Tomaatteja">
@@ -579,6 +600,8 @@
                     <p><a href="https://shop.makulia.fi/ragu-napoletano-napolilainen-tomaattikastike/" class="more-link">Kurkkaa resepti!</a></p>
                 </div>
             </div>
+
+            <div class="clearfix hidden-md"></div>
 
             <div class="col-lg-4 col-md-6 text-center">
                 <div class="service-box">
@@ -600,17 +623,6 @@
                 </div>
             </div>
 
-            <div class="clearfix hidden-md"></div>
-
-            <div class="col-lg-4 col-md-6 text-center">
-                <div class="service-box">
-                    <a class="no-hover" href="https://shop.makulia.fi/savuinen-samppanjarisotto/"><img src="img/recipes/savu-samppanja-pippuri-squared.jpg" class="img-responsive" alt="savuinen samppanjarisotto">
-                    <h3>Savuinen samppanjarisotto</h3>
-                    <p class="text-muted">Savustettu mozzarella, samppanja ja vastarouhittu mustapippuri antavat risotolle hienostuneen maun</p></a>
-                    <p><a href="https://shop.makulia.fi/savuinen-samppanjarisotto/" class="more-link">Testaa uusi makuelämys!</a></p>
-                </div>
-            </div>
-
             <div class="col-lg-4 col-md-6 text-center">
                 <div class="service-box">
                     <a class="no-hover" href="https://shop.makulia.fi/ricotta-lakka-sitruuna-muurinpohjaletut/"><img src="img/recipes/pinja-mm-lettu-ricotta.jpg" class="img-responsive" alt="Muurikkaletut ja ricotta-täyte">
@@ -620,9 +632,10 @@
                 </div>
             </div>
 
-            <div class="clearfix visible-md"></div>
+            <div class="clearfix"></div>
 
-            <div class="col-lg-4 col-md-6 text-center">
+            <!--HUOM col-offset -->
+            <div class="col-lg-4 col-lg-offset-4 col-md-6 col-md-offset-3 text-center">
                 <div class="service-box">
                     <a class="no-hover" href="https://shop.makulia.fi/paahdettu-munakoiso-tuoretta-mozzarellaa/"><img src="img/recipes/pinja-melanzane-square.jpg" class="img-responsive" alt="Paahdettua munakoisoa ja tuoretta mozzarellaa">
                     <h3>Paahdetut munakoisot</h3>
@@ -630,6 +643,8 @@
                     <p><a href="https://shop.makulia.fi/paahdettu-munakoiso-tuoretta-mozzarellaa/" class="more-link">Kurkkaa resepti!</a></p>
                 </div>
             </div>
+
+            <div class="clearfix"></div>
 
         </div>
     </section>
