--- a/index.html
+++ b/index.html
@@ -175,9 +175,9 @@
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 text-center">
                     <h3>Tulevat toimitukset</h3>
-                    <p class="text-muted">Seuraava erä tuoreita juustoja ja jogurttia on noudettavissa pe 8.3. lähtien Makulian noutopisteeltä.</p>
-                    <p class="red">Tilaa 4.3. mennessä!</p>
-                    <p class="text-muted">5.3. lähtien tehdyt tilaukset toimitetaan maaliskuussa.</p>
+                    <p class="text-muted">Seuraava erä tuoreita juustoja ja jogurttia on noudettavissa pe 29.3. lähtien Makulian noutopisteeltä.</p>
+                    <p class="red">Tilaa 25.3. mennessä!</p>
+                    <p class="text-muted">26.3. lähtien tehdyt tilaukset toimitetaan huhtikuussa.</p>
                 </div>
             </div>
         </div>
