deleted foglie di mirto, changed ricotta 350 -> 330 g

--- a/index.html
+++ b/index.html
@@ -301,18 +301,18 @@
                         <div class="text-center">
                             <a class="no-hover black" href="https://shop.makulia.fi/shop/ricotta/"><img src="img/products/ricotta.jpg" class="img-responsive" alt="Ricotta-juusto">
                             <h3>Tuore Ricotta di Bufala</h3>
-                            <p class="text-muted">Ricottajuustokiekko puhvelinmaidosta à 350 g</p></a>
+                            <p class="text-muted">Ricottajuustokiekko puhvelinmaidosta à 330 g</p></a>
                         </div>
                         <div>
                             <article>
                                 <img class="amount-icon col-xs-3" src="img/products/ricotta-icon-350g.svg" alt="1 kpl à 350 g">
-                                <p class="text-muted">350 g - 7,90 €</p></a>
+                                <p class="text-muted">330 g - 7,90 €</p></a>
                                 <a href="http://shop.makulia.fi/cart/?add-to-cart=367" class="addtocart hidden-xs">Lisää koriin</a>
                                 <a href="http://shop.makulia.fi/cart/?add-to-cart=367" class="more-link visible-xs col-xs-3"><i class="fa fa-shopping-cart fa-lg" aria-hidden="true"></i></a>
                             </article>
                             <article>
                                 <img class="amount-icon col-xs-3" src="img/products/ricotta-icon-700g.svg" alt="2 kpl à 350 g">
-                                <p class="text-muted">700 g - 15,80 €</p></a>
+                                <p class="text-muted">660 g - 15,80 €</p></a>
                                 <a href="http://shop.makulia.fi/cart/?add-to-cart=367&quantity=2" class="addtocart hidden-xs">Lisää koriin</a>
                                 <a href="http://shop.makulia.fi/cart/?add-to-cart=367&quantity=2" class="more-link visible-xs col-xs-3"><i class="fa fa-shopping-cart fa-lg" aria-hidden="true"></i></a>
                             </article>
@@ -511,24 +511,7 @@
 
             <div class="clearfix"></div>
 
-            <div class="col-md-6 text-center">
-                <div class="service-box padding-bottom">
-                    <div class="col-xs-12">
-                        <a class="no-hover black" href="https://shop.makulia.fi/shop/myrtin-lehdet-foglie-di-mirto/">
-                            <img src="img/products/mirto-foglie.jpg" class="img-responsive col-xs-4" alt="Myrtin lehtiä lasipurkissa">
-                        <h3 class="col-xs-8">Kuivattuja välimerenmyrtin lehtiä</h3></a>
-                    </div>
-                    <div class="col-xs-12 padding-bottom">
-                        <article>
-                            <a href="https://shop.makulia.fi/shop/myrtin-lehdet-foglie-di-mirto/" target="_blank" class="more-link"><i class="fa fa-info-circle red" aria-hidden="true"></i> Lue lisää</a>
-                            <p class="text-muted">7 g - 7 €</p>
-                            <a href="http://shop.makulia.fi/cart/?add-to-cart=832" class="col-xs-3"><i class="fa fa-shopping-cart fa-lg" aria-hidden="true"></i></a>
-                        </article>
-                    </div>   
-                </div>
-            </div>
-
-            <div class="col-md-6 text-center">
+            <div class="col-md-6 col-md-offset-3 text-center">
                 <div class="service-box padding-bottom">
                     <div class="col-xs-12">
                         <a class="no-hover black" href="https://shop.makulia.fi/shop/myrtin-marjat-bacche-di-mirto/">
