changed delivery date

--- a/index.html
+++ b/index.html
@@ -175,9 +175,9 @@
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 text-center">
                     <h3>Tulevat toimitukset</h3>
-                    <p class="text-muted">Seuraava erä tuoreita juustoja ja jogurttia on noudettavissa pe 29.3. lähtien Makulian noutopisteeltä.</p>
-                    <p class="red">Tilaa 25.3. mennessä!</p>
-                    <p class="text-muted">26.3. lähtien tehdyt tilaukset toimitetaan huhtikuussa.</p>
+                    <p class="text-muted">Seuraava erä tuoreita juustoja ja jogurttia on noudettavissa pe 12.4. lähtien Makulian noutopisteeltä.</p>
+                    <p class="red">Tilaa 8.4. mennessä!</p>
+                    <p class="text-muted">9.4. lähtien tehdyt tilaukset toimitetaan myöhemmin huhtikuussa.</p>
                 </div>
             </div>
         </div>
@@ -783,7 +783,7 @@
                     <h2 class="section-heading">Pinja täällä hei!</h2>
                     <hr class="primary">
                     <p>Makuliasta saa ensiluokkaisia eteläitalialaisia puhvelinmaitojuustoja, kuten mozzarellaa ja ricottaa. Juustot valmistaa Campanian sydämessä perinteikäs perheyritys, jonka meijeri on ollut jo sukupolvien ajan osa paikallista historiaa.</p>
-                    <p>Yhden naisen haave saada oikein tuoretta hyvää mozzarellaa myös Suomesta johti Makulian syntyyn. Kaupoista alle viikon vanhaa mozzarellaa on käytännössä mahdotonta löytää, joten päätin alkaa tuoda juustoa itselleni ja muille herkkusuille ilman mozzarellan matkaa hidastavia välikäsiä.</p>
+                    <p>Yhden naisen haave saada oikein tuoretta hyvää mozzarellaa myös Suomesta johti Makulian syntyyn. Ruokakaupoista alle viikon vanhaa mozzarellaa on käytännössä mahdotonta löytää, joten päätin alkaa tuoda juustoa itselleni ja muille herkkusuille ilman mozzarellan matkaa hidastavia välikäsiä.</p>
                     <!--
                     <p>Makuliasta saa ensiluokkaisia puhvelinmaitojuustoja, kuten mozzarellaa ja ricottaa. Tuotteet valitaan yksitellen ihmisen kokoisilta tuottajilta eteläisestä Italiasta. Valmistajat ovat perheyrityksiä tai pienehköjä firmoja, joiden tuotteilla on juuret syvällä paikallisissa perinteissä. Tällä hetkellä Makulia toimittaa erinomaista puhvelimozzarellaa sekä ricottaa Helsinkiin.</p> 
                     <p>Heräsikö kysyttävää? Tiedusteluihin vastaa Pinja, Makulian perustaja, joka haluaa tarjota erityislaatuisia herkkuja ulottuvillenne.</p> -->
