changed the delivery dates

--- a/index.html
+++ b/index.html
@@ -175,9 +175,9 @@
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 text-center">
                     <h3>Tulevat toimitukset</h3>
-                    <p class="text-muted">Seuraava erä tuoreita juustoja ja jogurttia on noudettavissa pe 26.4. lähtien Makulian noutopisteeltä.</p>
-                    <p class="red">Tilaa 22.4. mennessä!</p>
-                    <p class="text-muted">23.4. lähtien tehdyt tilaukset toimitetaan myöhemmin. </p>
+                    <p class="text-muted">Seuraava erä tuoreita juustoja ja jogurttia on noudettavissa pe 10.5. lähtien Makulian noutopisteeltä.</p>
+                    <p class="red">Tilaa 6.5. mennessä!</p>
+                    <p class="text-muted">7.5. tai sen jälkeen tehdyt tilaukset toimitetaan myöhemmin. </p>
                 </div>
             </div>
         </div>
