added #treccia anchor

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                                 <img class="amount-icon col-xs-3" src="img/products/mozzarella-icon-250g.svg" alt="1 kpl à 250 g">
                                 <p class="text-muted">250 g - 8,90 €</p>
                                 <a href="http://shop.makulia.fi/cart/?add-to-cart=159" class="addtocart hidden-xs">Lisää koriin</a>
-                                <a href="http://shop.makulia.fi/cart/?add-to-cart=159" class="more-link visible-xs col-xs-3"><i class="fa fa-shopping-cart fa-lg" aria-hidden="true"></i></a>
+                                <a href="http://shop.makulia.fi/cart/?add-to-cart=159" class="visible-xs col-xs-3"><i class="fa fa-shopping-cart fa-lg" aria-hidden="true"></i></a>
                             </article>
 
                             <article>
@@ -305,7 +305,7 @@
                                 <img class="amount-icon col-xs-3" src="img/products/affumicata-icon-250g.svg" alt="1 kpl à 250 g">
                                 <p class="text-muted">250 g - 9,50 €</p></a>
                                 <a href="http://shop.makulia.fi/cart/?add-to-cart=254" class="addtocart hidden-xs">Lisää koriin</a>
-                                <a href="http://shop.makulia.fi/cart/?add-to-cart=254" class="more-link visible-xs col-xs-3"><i class="fa fa-shopping-cart fa-lg" aria-hidden="true"></i></a>
+                                <a href="http://shop.makulia.fi/cart/?add-to-cart=254" class="visible-xs col-xs-3"><i class="fa fa-shopping-cart fa-lg" aria-hidden="true"></i></a>
                             </article>
                             <article>
                                 <img class="amount-icon col-xs-3" src="img/products/affumicata-icon-500g.svg" alt="2 kpl à 250 g">
@@ -356,7 +356,7 @@
                                 <img class="amount-icon col-xs-3" src="img/products/ricotta-icon-350g.svg" alt="1 kpl à 350 g">
                                 <p class="text-muted">330 g - 7,90 €</p></a>
                                 <a href="http://shop.makulia.fi/cart/?add-to-cart=367" class="addtocart hidden-xs">Lisää koriin</a>
-                                <a href="http://shop.makulia.fi/cart/?add-to-cart=367" class="more-link visible-xs col-xs-3"><i class="fa fa-shopping-cart fa-lg" aria-hidden="true"></i></a>
+                                <a href="http://shop.makulia.fi/cart/?add-to-cart=367" class="visible-xs col-xs-3"><i class="fa fa-shopping-cart fa-lg" aria-hidden="true"></i></a>
                             </article>
                             <article>
                                 <img class="amount-icon col-xs-3" src="img/products/ricotta-icon-700g.svg" alt="2 kpl à 350 g">
@@ -385,7 +385,7 @@
                                 <img class="amount-icon col-xs-3" src="img/products/yogurt-icon-1.svg" alt="1 jogurttipurkki">
                                 <p class="text-muted">1 kpl - 2,90 €</p></a>
                                 <a href="http://shop.makulia.fi/cart/?add-to-cart=531" class="addtocart hidden-xs">Lisää koriin</a>
-                                <a href="http://shop.makulia.fi/cart/?add-to-cart=531" class="more-link visible-xs col-xs-3"><i class="fa fa-shopping-cart fa-lg" aria-hidden="true"></i></a>
+                                <a href="http://shop.makulia.fi/cart/?add-to-cart=531" class="visible-xs col-xs-3"><i class="fa fa-shopping-cart fa-lg" aria-hidden="true"></i></a>
                             </article>
                             <article>
                                 <img class="amount-icon col-xs-3" src="img/products/yogurt-icon-2.svg" alt="2 jogurttipurkkia">
@@ -399,7 +399,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-4 col-lg-offset-0
+                <div id="treccia" class="col-lg-4 col-lg-offset-0
                 col-md-6 col-md-offset-3">
                     <div class="service-box">
                         <div class="text-center">
