removed crema di aglio and changed the delivery date

--- a/index.html
+++ b/index.html
@@ -225,9 +225,9 @@
                 <div class="row">
                     <div class="col-xs-12 col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 text-center">
                         <h3>Tulevat toimitukset</h3>
-                        <p class="text-muted">Seuraava erä tuoreita juustoja ja jogurttia on noudettavissa pe 31.5. lähtien Makulian noutopisteeltä.</p>
-                        <p class="red">Tilaa 27.5. mennessä!</p>
-                        <p class="text-muted">28.5. tai sen jälkeen tehdyt tilaukset toimitetaan kesäkuussa. </p>
+                        <p class="text-muted">Seuraava erä tuoreita juustoja ja jogurttia on noudettavissa pe 14.6. lähtien Makulian noutopisteeltä.</p>
+                        <p class="red">Tilaa 10.6. mennessä!</p>
+                        <p class="text-muted">11.6. tai sen jälkeen tehdyt tilaukset toimitetaan myöhemmin kesäkuussa. </p>
                     </div>
                 </div>
             </div>
@@ -488,36 +488,21 @@
             <div class="col-md-4 text-center">
                 <div class="service-box padding-bottom">
                     <div class="text-center">
-                        <a class="no-hover black" href="https://shop.makulia.fi/shop/valkosipulitahna-crema-di-aglio/"><img src="img/products/crema-aglio.jpg" class="img-responsive mx-auto d-block" alt="valkosipulitahna">
-                        <h3>Crema di Aglio<br><small>Karkea valkosipulitahna</small></h3></a>
+                        <a class="no-hover black" href="https://shop.makulia.fi/shop/myrtin-marjat-bacche-di-mirto/"><img src="img/products/mirto-bacche2.jpg" class="img-responsive mx-auto d-block" alt="Myrtin marjoja lasipurkissa">
+                        <h3>Bacche di Mirto<br><small>Kuivattuja välimerenmyrtin marjoja</small></h3></a>
                     </div>
                     <div>
                         <article>
-                            <p class="text-muted">212 g - 14,50 €</p>
-                            <a href="http://shop.makulia.fi/cart/?add-to-cart=756" class="col-xs-3"><i class="fa fa-shopping-cart fa-lg" aria-hidden="true"></i></a>
+                            <p class="text-muted">80 g - 11,00 €</p>
+                            <a href="http://shop.makulia.fi/cart/?add-to-cart=830" class="col-xs-3"><i class="fa fa-shopping-cart fa-lg" aria-hidden="true"></i></a>
                         </article>
                     </div>
                     <div class="text-center">
-                        <a href="http://shop.makulia.fi/shop/valkosipulitahna-crema-di-aglio/" target="_blank" class="more-link"><i class="fa fa-info-circle red" aria-hidden="true"></i> Lue lisää raikkaasta valkosipulitahnasta</a>
+                        <a href="http://shop.makulia.fi/shop/myrtin-marjat-bacche-di-mirto/" target="_blank" class="more-link"><i class="fa fa-info-circle red" aria-hidden="true"></i> Lue lisää välimerenmyrtistä</a>
                     </div>
                 </div>
             </div>
-
-            <div class="col-md-4 text-center">
-                <div class="service-box padding-bottom">
-                    <div class="text-center">
-                        <a class="no-hover black" href="https://shop.makulia.fi/shop/lahjakortti/"><img src="img/products/lahjakortti-1x.jpg" class="img-responsive" alt="lahjakortti">
-                        <h3>Lahjakortti<br><small>Anna lahjaksi makuelämys</small></h3></a>
-                    </div>
-                    <p class="text-muted padding-bottom">20 € - 100 €</p>
-                    <div class="text-center">
-                        <a href="https://shop.makulia.fi/shop/lahjakortti/" target="_blank" class="more-link"><i class="fa fa-shopping-cart red" aria-hidden="true"></i> Valitse kortin arvo ja osta</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="clearfix"></div>
-
+<!--
             <div class="col-md-6 col-md-offset-3 text-center">
                 <div class="service-box padding-bottom">
                     <div class="col-xs-12">
@@ -532,6 +517,19 @@
                             <a href="http://shop.makulia.fi/cart/?add-to-cart=830" class="col-xs-3"><i class="fa fa-shopping-cart fa-lg" aria-hidden="true"></i></a>
                         </article>
                     </div>   
+                </div>
+            </div>
+-->
+            <div class="col-md-4 text-center">
+                <div class="service-box padding-bottom">
+                    <div class="text-center">
+                        <a class="no-hover black" href="https://shop.makulia.fi/shop/lahjakortti/"><img src="img/products/lahjakortti-1x.jpg" class="img-responsive" alt="lahjakortti">
+                        <h3>Lahjakortti<br><small>Anna lahjaksi makuelämys</small></h3></a>
+                    </div>
+                    <p class="text-muted padding-bottom">20 € - 100 €</p>
+                    <div class="text-center">
+                        <a href="https://shop.makulia.fi/shop/lahjakortti/" target="_blank" class="more-link"><i class="fa fa-shopping-cart red" aria-hidden="true"></i> Valitse kortin arvo ja osta</a>
+                    </div>
                 </div>
             </div>
 
