--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                         <h3>Tulevat toimitukset</h3>
                         <p class="text-muted">Seuraava erä tuoreita juustoja ja jogurttia on noudettavissa pe 28.6. lähtien Makulian noutopisteeltä.</p>
                         <p class="red">Tilaa 24.6. mennessä!</p>
-                        <p class="text-muted">25.6. tai sen jälkeen tehdyt tilaukset toimitetaan myöhemmin kesäkuussa. </p>
+                        <p class="text-muted">25.6. tai sen jälkeen tehdyt tilaukset toimitetaan myöhemmin heinäkuussa. </p>
                     </div>
                 </div>
             </div>
