changed the price of provola

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                         <h3>Tulevat toimitukset</h3>
                         <p class="text-muted">Seuraava erä tuoreita juustoja ja jogurttia on noudettavissa pe 28.6. lähtien Makulian noutopisteeltä.</p>
                         <p class="red">Tilaa 24.6. mennessä!</p>
-                        <p class="text-muted">25.6. tai sen jälkeen tehdyt tilaukset toimitetaan myöhemmin heinäkuussa. </p>
+                        <p class="text-muted">25.6. tai sen jälkeen tehdyt tilaukset toimitetaan heinäkuun lopulla. </p>
                     </div>
                 </div>
             </div>
@@ -303,18 +303,18 @@
                         <div>
                             <article>
                                 <img class="amount-icon col-xs-3" src="img/products/affumicata-icon-250g.svg" alt="1 kpl à 250 g">
-                                <p class="text-muted">250 g - 9,50 €</p></a>
+                                <p class="text-muted">250 g - 9,80 €</p></a>
                                 <a href="http://shop.makulia.fi/cart/?add-to-cart=254" class="addtocart hidden-xs">Lisää koriin</a>
                                 <a href="http://shop.makulia.fi/cart/?add-to-cart=254" class="visible-xs col-xs-3"><i class="fa fa-shopping-cart fa-lg" aria-hidden="true"></i></a>
                             </article>
                             <article>
                                 <img class="amount-icon col-xs-3" src="img/products/affumicata-icon-500g.svg" alt="2 kpl à 250 g">
-                                <p class="text-muted">500 g - 17,50 €</p></a>
+                                <p class="text-muted">500 g - 17,80 €</p></a>
                                 <a href="http://shop.makulia.fi/cart/?add-to-cart=257" class="col-xs-3"><i class="fa fa-shopping-cart fa-lg" aria-hidden="true"></i></a>
                             </article>
                             <article>
                                 <img class="amount-icon col-xs-3" src="img/products/affumicata-icon-1kg.svg" alt="4 kpl à 250 g">
-                                <p class="text-muted">1 kg - 31 €</p></a>
+                                <p class="text-muted">1 kg - 31,50 €</p></a>
                                 <a href="http://shop.makulia.fi/cart/?add-to-cart=265" class="col-xs-3"><i class="fa fa-shopping-cart fa-lg" aria-hidden="true"></i></a>
                             </article>
                         </div>
