fixed the icon problem in firefox, changed the delivery date

--- a/index.html
+++ b/index.html
@@ -176,58 +176,63 @@
                 </div>
             </div>
             -->
-            <div class="hidden-xs">
-                <article class="col-sm-4 text-left padding-top tuotetiedot">
-                    <img class="col-xs-4" src="img/icons/ikoni_maito-tumma.svg" alt="tuoretta maitoa">
-                    <div>
+            <div>
+                <article class="hidden-xs col-sm-4 text-left padding-top tuotetiedot">
+                    <div class="col-xs-4">
+                        <img class="w100" src="img/icons/ikoni_maito-tumma.svg" alt="tuoretta maitoa">
+                    </div>
+                    <div class="col-xs-8">
                         <h4 class="red">Oikeasti tuoretta</h4>
                         <p class="text-muted">Mozzarella ja muut tuorejuustot valmistetaan Campanian sydämessä vastalypsetystä maidosta ja ne saapuvat Suomeen vain kahden päivän ikäisinä.</p>
                     </div>
                 </article>
 
-                <article class="col-sm-4 text-left padding-top tuotetiedot">
-                    <img class="col-xs-4" src="img/icons/ikoni_puhveli-tumma.svg" alt="puhveli">
-                    <div>
+                <div class="visible-xs col-sm-4 text-center padding-top tuotetiedot">
+                    <img class="col-xs-6 col-xs-offset-3" src="img/icons/ikoni_maito-tumma.svg" alt="tuoretta maitoa">
+                    <h4 class="red col-xs-12">Oikeasti tuoretta</h4>
+                    <p class="text-muted col-xs-12">Mozzarella ja muut tuorejuustot valmistetaan Campanian sydämessä vastalypsetystä maidosta ja ne saapuvat Suomeen vain kahden päivän ikäisinä.</p>
+                </div>
+
+                <article class="hidden-xs col-sm-4 text-left padding-top tuotetiedot">
+                    <div class="col-xs-4">
+                        <img class="w100" src="img/icons/ikoni_puhveli-tumma.svg" alt="puhveli">
+                    </div>
+                    <div class="col-xs-8">
                         <h4 class="red">Puhvelinmaidosta</h4>
                         <p class="text-muted">Maitotuotteet valmistetaan meijerin oman tuhatpäisen puhvelilauman maidosta. Eläimet nauttivat tuoretta rehua maidon laadun takaamiseksi!</p>
                     </div>
                 </article>
 
-                <article class="col-sm-4 text-left padding-top tuotetiedot">
-                    <img class="col-xs-4" src="img/icons/ikoni_kasi-mozzarella-tumma.svg" alt="mozzarella">
-                    <div>
-                        <h4 class="red">Käsityönä</h4>
-                        <p class="text-muted">Meijeri valmistaa juustot perinteisin menetelmin sukupolvien kokemuksella - perheyritys tunnetaankin paikallisena laatumozzarellan valmistajana.</p>
-                    </div>
-                </article>
-            </div>
-
-            <div class="visible-xs">
-                <div class="col-sm-4 text-center padding-top tuotetiedot">
-                    <img class="col-xs-6 col-xs-offset-3" src="img/icons/ikoni_maito-tumma.svg" alt="tuoretta maitoa">
-                    <h4 class="red col-xs-12">Oikeasti tuoretta</h4>
-                    <p class="text-muted col-xs-12">Mozzarella ja muut tuorejuustot valmistetaan Campanian sydämessä vastalypsetystä maidosta ja ne saapuvat Suomeen vain kahden päivän ikäisinä.</p>
-                </div>
-                <div class="col-sm-4 text-center padding-top tuotetiedot">
+                <div class="visible-xs col-sm-4 text-center padding-top tuotetiedot">
                     <img class="col-xs-6 col-xs-offset-3" src="img/icons/ikoni_puhveli-tumma.svg" alt="puhveli">
                     <h4 class="red col-xs-12">Puhvelinmaidosta</h4>
                     <p class="text-muted col-xs-12">Maitotuotteet valmistetaan meijerin oman tuhatpäisen puhvelilauman maidosta. Eläimet nauttivat tuoretta rehua maidon laadun takaamiseksi!</p>
                 </div>
-                <div class="col-sm-4 text-center padding-top tuotetiedot">
+
+                <article class="hidden-xs col-sm-4 text-left padding-top tuotetiedot">
+                    <div class="col-xs-4">
+                        <img class="w100" src="img/icons/ikoni_kasi-mozzarella-tumma.svg" alt="mozzarella">
+                    </div>
+                    <div class="col-xs-8">
+                        <h4 class="red">Käsityönä</h4>
+                        <p class="text-muted">Meijeri valmistaa juustot perinteisin menetelmin sukupolvien kokemuksella - perheyritys tunnetaankin paikallisena laatumozzarellan valmistajana.</p>
+                    </div>
+                </article>
+
+                <div class="visible-xs col-sm-4 text-center padding-top tuotetiedot">
                     <img class="col-xs-6 col-xs-offset-3" src="img/icons/ikoni_kasi-mozzarella-tumma.svg" alt="mozzarella">
                     <h4 class="red col-xs-12">Käsityönä</h4>
                     <p class="text-muted col-xs-12">Meijeri valmistaa juustot perinteisin menetelmin sukupolvien kokemuksella - perheyritys tunnetaankin paikallisena laatumozzarellan valmistajana.</p>
                 </div>
-            </div>
-            
+            </div>            
 
             <div class="container">
                 <div class="row">
                     <div class="col-xs-12 col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 text-center">
                         <h3>Tulevat toimitukset</h3>
-                        <p class="text-muted">Seuraava erä tuoreita juustoja ja jogurttia on noudettavissa pe 28.6. lähtien Makulian noutopisteeltä.</p>
-                        <p class="red">Tilaa 24.6. mennessä!</p>
-                        <p class="text-muted">25.6. tai sen jälkeen tehdyt tilaukset toimitetaan heinäkuun lopulla. </p>
+                        <p class="text-muted">Seuraava erä tuoreita juustoja ja jogurttia on noudettavissa pe 26.7. lähtien Makulian noutopisteeltä.</p>
+                        <p class="red">Tilaa 22.7. mennessä!</p>
+                        <p class="text-muted">23.7. tai sen jälkeen tehdyt tilaukset toimitetaan elokuussa. </p>
                     </div>
                 </div>
             </div>
