--- a/index.html
+++ b/index.html
@@ -230,9 +230,9 @@
                 <div class="row">
                     <div class="col-xs-12 col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 text-center">
                         <h3>Tulevat toimitukset</h3>
-                        <p class="text-muted">Seuraava erä tuoreita juustoja ja jogurttia on noudettavissa pe 26.7. lähtien Makulian noutopisteeltä.</p>
-                        <p class="red">Tilaa 22.7. mennessä!</p>
-                        <p class="text-muted">23.7. tai sen jälkeen tehdyt tilaukset toimitetaan elokuussa. </p>
+                        <p class="text-muted">Seuraava erä tuoreita juustoja ja jogurttia on noudettavissa ma 29.7. lähtien Makulian noutopisteeltä.</p>
+                        <p class="red">Tilaa 24.7. mennessä!</p>
+                        <p class="text-muted">25.7. tai sen jälkeen tehdyt tilaukset toimitetaan 9.8. </p>
                     </div>
                 </div>
             </div>
