--- a/index.html
+++ b/index.html
@@ -230,9 +230,9 @@
                 <div class="row">
                     <div class="col-xs-12 col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 text-center">
                         <h3>Tulevat toimitukset</h3>
-                        <p class="text-muted">Seuraava erä tuoreita juustoja ja jogurttia on noudettavissa perjantaina 9.8. lähtien Makulian noutopisteeltä.</p>
-                        <p class="red">Tilaa su 4.8. mennessä!</p>
-                        <p class="text-muted">5.8. tai sen jälkeen tehdyt tilaukset toimitetaan myöhemmin elokuussa </p>
+                        <p class="text-muted">Seuraava erä tuoreita juustoja ja jogurttia on noudettavissa perjantaina 6.9. lähtien Makulian noutopisteeltä.</p>
+                        <p class="red">Tilaa su 1.9. mennessä!</p>
+                        <p class="text-muted">2.9. tai sen jälkeen tehdyt tilaukset toimitetaan myöhemmin syyskuussa </p>
                     </div>
                 </div>
             </div>
