--- a/index.html
+++ b/index.html
@@ -779,7 +779,7 @@
         <div class="footer">
             <div class="container">
                 <div class="text-center">
-                    <p>Copyright <img class="logo" src="img/logo-onerow.svg" alt="Makulia"> 2018</p>
+                    <p>Copyright <img class="logo" src="img/logo-onerow.svg" alt="Makulia"> 2017-2019</p>
                 </div>
             </div>
         </div>
