changed the delivery date

--- a/index.html
+++ b/index.html
@@ -145,10 +145,6 @@
                     <!--
                     <li>
                         <a href="/en">English</a>
-                    </li>
-                    
-                    <li>
-                        <a class="page-scroll" href="#ota-yhteytta">Ota yhteyttä</a>
                     </li>-->
                 </ul>
             </div>
@@ -160,22 +156,11 @@
 
     <header class="temporary">
         <div class="temp">
-            <!--<img class="img-responsive hidden-xs" src="img/vuori-kuumailmapallo-panoraama.jpg">
-            <img class="img-responsive visible-xs-block" src="img/vuori-kuumailmapallo-panoraama-mobile.jpg">-->
             <img class="img-responsive hidden-xs" src="img/ilmapallo-kukkapuu-panoraama-pinja.jpg">
             <img class="img-responsive visible-xs-block" src="img/ilmapallo-kukkapuu-pinja.jpg">
             <img class="img-responsive hidden-xs hidden-sm hidden-md hidden-lg" src="img/maailmankello-mozzarella-maanantai-link-opt.jpg">
             <img class="img-responsive hidden-xs hidden-sm hidden-md hidden-lg" src="img/mozzarellaa-pinja.jpg">
 
-            <!--
-            <div class="container">
-                <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 text-center">
-                    <h3>Tilaa 4.11. mennessä - saat lahjaksi puhvelinmaitojogurttia</h3>
-                    <p class="text-muted">Lisään tilaukseesi kaupan päälle annoksen kermaista puhvelinmaidosta tehtyä jogurttia, kun tilaat vähintään 1 kg verran tuotteita! Jos tilaat kaksi kiloa, saat myös kaksi jogurttia. Sinun ei tarvitse lisätä jogurttia ostoskoriisi, ellet halua ostaa useampaa.</p>
-                    <p class="text-muted">Tarjous on voimassa 29.10.-4.11.2018</p>
-                </div>
-            </div>
-            -->
             <div>
                 <article class="hidden-xs col-sm-4 text-left padding-top tuotetiedot">
                     <div class="col-xs-4">
@@ -230,9 +215,9 @@
                 <div class="row">
                     <div class="col-xs-12 col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 text-center">
                         <h3>Tulevat toimitukset</h3>
-                        <p class="text-muted">Seuraava erä tuoreita juustoja ja jogurttia on noudettavissa perjantaina 4.10. lähtien Makulian noutopisteeltä.</p>
-                        <p class="red">Tilaa su 29.9. mennessä!</p>
-                        <p class="text-muted">30.9. tai sen jälkeen tehdyt tilaukset toimitetaan myöhemmin </p>
+                        <p class="text-muted">Seuraava erä tuoreita juustoja ja jogurttia on noudettavissa perjantaina 18.10. lähtien Makulian noutopisteeltä.</p>
+                        <p class="red">Tilaa su 13.10. mennessä!</p>
+                        <!--<p class="text-muted">30.9. tai sen jälkeen tehdyt tilaukset toimitetaan myöhemmin </p>-->
                     </div>
                 </div>
             </div>
@@ -269,18 +254,6 @@
                                 <p class="text-muted">1 kg - 29 €</p>
                                 <a href="http://shop.makulia.fi/cart/?add-to-cart=151" class="col-xs-3"><i class="fa fa-shopping-cart fa-lg" aria-hidden="true"></i></a>
                             </article>
-                            <!--
-                            <article>
-                                <img class="amount-icon col-xs-3" src="img/products/treccia-icon-500g-bagx.svg" alt="1 kpl treccia-mozzarellaa à 500 g">
-                                <p class="text-muted">500 g - 19,50 €</p>
-                                <a href="http://shop.makulia.fi/cart/?add-to-cart=654" class="col-xs-3"><i class="fa fa-shopping-cart fa-lg" aria-hidden="true"></i></a>
-                            </article>
-
-                            <article>
-                                <img class="amount-icon col-xs-3" src="img/products/treccia-icon-1kg-bagx.svg" alt="1 kpl treccia-mozzarellaa à 1 kg">
-                                <p class="text-muted">1 kg - 34,90 €</p>
-                                <a href="http://shop.makulia.fi/cart/?add-to-cart=657" class="col-xs-3"><i class="fa fa-shopping-cart fa-lg" aria-hidden="true"></i></a>
-                            </article>-->
                         
                         </div>
                         <div class="text-center padding-bottom">
@@ -741,16 +714,6 @@
         </div>
     </section>
 
-<!--
-    <aside class="bg-dark">
-        <div class="container text-center">
-            <div class="call-to-action">
-                <h2>Free Download at Start Bootstrap!</h2>
-                <a href="http://startbootstrap.com/template-overviews/creative/" class="btn btn-default btn-xl sr-button">Download Now!</a>
-            </div>
-        </div>
-    </aside>
--->
     <section id="ota-yhteytta">
         <div class="container">
             <div class="row">
@@ -759,17 +722,8 @@
                     <hr class="primary">
                     <p>Makuliasta saa ensiluokkaisia eteläitalialaisia puhvelinmaitojuustoja, kuten mozzarellaa ja ricottaa. Juustot valmistaa Campanian sydämessä perinteikäs perheyritys, jonka meijeri on ollut jo sukupolvien ajan osa paikallista historiaa.</p>
                     <p>Yhden naisen haave saada oikein tuoretta hyvää mozzarellaa myös Suomesta johti Makulian syntyyn. Ruokakaupoista alle viikon vanhaa mozzarellaa on käytännössä mahdotonta löytää, joten päätin alkaa tuoda juustoa itselleni ja muille herkkusuille ilman mozzarellan matkaa hidastavia välikäsiä.</p>
-                    <!--
-                    <p>Makuliasta saa ensiluokkaisia puhvelinmaitojuustoja, kuten mozzarellaa ja ricottaa. Tuotteet valitaan yksitellen ihmisen kokoisilta tuottajilta eteläisestä Italiasta. Valmistajat ovat perheyrityksiä tai pienehköjä firmoja, joiden tuotteilla on juuret syvällä paikallisissa perinteissä. Tällä hetkellä Makulia toimittaa erinomaista puhvelimozzarellaa sekä ricottaa Helsinkiin.</p> 
-                    <p>Heräsikö kysyttävää? Tiedusteluihin vastaa Pinja, Makulian perustaja, joka haluaa tarjota erityislaatuisia herkkuja ulottuvillenne.</p> -->
                     <p><a href="javascript:void(Tawk_API.toggle())">Chattaa Makulian Pinjalle tästä</a> tai soita +358 44 3053067</p>
                 </div>
-                <!--
-                <div class="col-lg-4 col-lg-offset-2 text-center">
-                    <i class="fa fa-phone fa-3x sr-contact"></i>
-                    <p>123-456-6789</p>
-                </div>
-                -->
             </div>
         </div>
     </section>
